QuoteButton small fix

--- a/src/components/QuoteButton/QuoteButton.module.css
+++ b/src/components/QuoteButton/QuoteButton.module.css
@@ -1,6 +1,7 @@
 .button {
     font-size: var(--xl);
     font-weight: 700;
+    letter-spacing: 0.5px;
     padding: 20px 24px;
     border: 2px solid var(--purple-primary);
     border-radius: 100px;
